--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,68 @@
 /* style.css */
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: bisque;
+    color: black;
     margin: 0;
-    padding: 0;
+    padding: o;
+    margin: 10px auto;
+    padding: 15px;
+    width: 720px;
+}
+
+#pagewrapper {
+	margin-top:2em;
+    padding:2em;
+    background-color: cadetblue;
+}
+
+a {
+    font-size: 1.5rem;
+}
+
+#header, #footer{
+    text-align: center;
+    background-color: burlywood;
+    padding: 5px;
+    border: solid 5px;
+    border-color: #3b372a;
+
+}
+#header{
+    margin-bottom: 2rem;
+}
+ #content{
+     font-size: 1.5em;
+
+ }
+
+#footer{
+    margin-top: 2rem;
+    padding: .15rem;
+    font-size: 1.25rem;
+}
+
+#footer>p{
+    margin-top: 1rem;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+h1{
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+h2{
+    text-align: justify;
+    font-size: 1.5rem;    
+}
+
+.middle{
+    text-align: center;
 }
